--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackiethon",
-  "homepage": "https://LC-06.github.io/Hackiethon-2021-DSN/",
+  "homepage": "https://lc-06.github.io/Hackiethon-2021-DSN/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
